Fix Vercel serverless: Add api folder, update Prisma for serverless, add build script

--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
   "name": "ai-learning-hub-server",
   "version": "1.0.0",
   "description": "AI Learning Hub Backend - Ghana Education Platform",
-  "main": "server.js",
+  "main": "api/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "build": "prisma generate",
+    "vercel-build": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
